<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:orientation="vertical"
    android:gravity="center">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp">

                <TextView
                    android:id="@+id/txt_firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstname"
                    android:textColor="#000"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="14sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_firstname"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>


            <View
                android:layout_width="0.5dp"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:layout_centerInParent="true"
                android:background="#000"/>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp">

                <TextView
                    android:id="@+id/txt_lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname"
                    android:layout_marginTop="35dp"
                    android:textColor="#000"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="14sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_lastname"
                    android:layout_marginTop="10dp"/>


            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtView_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_marginLeft="8dp"
                android:textColor="#000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="6dp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob"
                android:layout_marginLeft="8dp"
                android:textColor="#000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="6dp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:layout_marginLeft="8dp"
                android:textColor="#000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="6dp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/pass"
                android:layout_marginLeft="8dp"
                android:textColor="#000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="6dp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms" />

        </LinearLayout>


        <Button
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginTop="30dp"
            android:textColor="@drawable/button_text_color"
            android:background="@drawable/button_round_corner"
            android:textSize="18dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_marginTop="30dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerwith"
            android:layout_marginTop="45dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="18dp">


            <Button
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:text="@string/facebook"
                android:drawableLeft="@drawable/ic_facebook"
                android:padding="8dp"
                android:gravity="center"
                android:background="@drawable/facebook_round_corner"
                android:textColor="@drawable/button_text_color"
                android:textSize="16sp"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/google"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/google_round_corner_button"
                android:textColor="@drawable/button_text_color"
                android:textSize="16sp"/>



        </LinearLayout>



    </LinearLayout>



</ScrollView>